--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-  <title>Item Lister 5</title>
+  <title>Item Lister</title>
 </head>
 <body>
   <header id="main-header" class="bg-success text-white p-4 mb-3">
     <div class="container">
-      <h1 id="header-title">Item Lister<span style="display:none">123</span></h1>
+      <h1 id="header-title">Item Lister <span style="display:none">123</span></h1>
     </div>
   </header>
   <div class="container">
    <div id="main" class="card card-body">
-    <h2  id ="title" class="title">Add Items</h2>
+    <h2 class="title">Add Items</h2>
     <form class="form-inline mb-3">
       <input type="text" class="form-control mr-2">
       <input type="submit" class="btn btn-dark" value="Submit">
@@ -30,11 +30,12 @@
    </div>
   </div>
   <script>
-    let title = document.getElementById('header-title');
-    title.style.borderBottom = 'solid 3px #000';
-    let add = document.getElementById('title');
-    add.innerHTML = '<b>Add Items</b>'
-    add.style.color = 'green';
+    let items = document.getElementsByClassName('list-group-item');
+    console.log(items);
+    items[2].style.backgroundColor = 'green';
+    for(let a=0;a<items.length;a++){
+      items[a].style.fontWeight = 'bold';
+    }
   </script>
 
 </body>
