--- a/Task1/epense-tracker/frontend.html
+++ b/Task1/epense-tracker/frontend.html
@@ -21,7 +21,7 @@
         }
         button {
             margin: 0.5rem 0;
-            display: block;
+            /* display: block; */
         }
     </style>
 </head>
@@ -34,8 +34,9 @@
         <label for="mail">Enter email</label>
         <input type="email" id="mail" name="email" required>
         <label for="password">Enter password</label>
-        <input type="password" id="password" name="password" minlength="6" required>
+        <input type="password" id="password" name="password" minlength="6" required><br/>
         <button type="submit">Signup</button>
+        <a href="../Login/login.html">Existing User-Login</a>
     </form>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.0/axios.min.js"></script>
     <script>
@@ -50,9 +51,15 @@
                 };
                 e.target.reset();
                 console.log(obj);
-                await axios.post('http://localhost:3000/user/signup', obj);
+                const response = await axios.post('http://localhost:3000/user/signup', obj);
+                if(response.status === 201){
+                    // window.location.href = '../Login/login.html';
+                }
             }catch(err){
                 console.log(err);
+                document.querySelector('form').innerHTML += `<p style='color: red;'>Error: User already exists</p>`;
+
+                
             }
         }
     </script>
