--- a/Task1/expense-tracker/index.htm
+++ b/Task1/expense-tracker/index.htm
@@ -69,7 +69,7 @@
                 };
                 e.target.reset();
                 console.log(obj);
-                const response = await axios.post('http:localhost:3000/expense/addexpense', obj);
+                const response = await axios.post('http:localhost:3000/expense/addexpense', obj, {headers: {"Authorization": localStorage.getItem('token')}});
                 displayExpenses(response.data);
             }
             catch(err){
@@ -78,7 +78,9 @@
         }
         window.addEventListener('DOMContentLoaded', async () => {
             try{
-                const response = await axios.get('http:localhost:3000/expense/getexpenses');
+                const token = localStorage.getItem('token');
+                console.log(token);
+                const response = await axios.get('http:localhost:3000/expense/getexpenses', { headers: {"Authorization": token}});
                 response.data.forEach(expense => {
                     displayExpenses(expense);
                 })
