--- a/Task1/expense-tracker/index.htm
+++ b/Task1/expense-tracker/index.htm
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,56 +10,69 @@
         form {
             width: 18rem;
             margin: auto;
-            padding: 1rem;
+            padding: 3rem 1rem 1rem;
         }
+
         label {
             display: block;
             margin-top: 0.5rem;
         }
+
         input {
             width: 95%;
             margin-top: 1px;
         }
+
         button {
             margin: 0.5rem 0;
             /* display: block; */
         }
+
         select {
             width: 97%;
             height: 1.3rem;
         }
-        ul {
+
+        div {
+            width: fit-content;
             margin: auto;
         }
     </style>
 </head>
+
 <body>
-    <form>
-        <label for="amount">Enter expense amount</label>
-        <input type="number" id="amount" name="amount" min="1" required/>
-        <label for="desc">Enter description</label>
-        <input type="text" id="desc" name="description" required/>
-        <label for="category">Choose a category</label>
-        <select id="category" name="category" required>
-        <option value="">--from below--</option>
-        <option>Movie</option>
-        <option>Picnic</option>
-        <option>Exhibition</option>
-        <option>Household</option></select>
-        <!-- <label for="password">Enter password</label>
-        <input type="password" id="password" name="password" minlength="6" required><br/> -->
-        <button type="submit">Add Expense</button>
-        <!-- <a href="./login.html">Existing User-Login</a> -->
-    </form>
-    <ul id="expenses"><h2>Expenses</h2></ul>
+    <div>
+        <h2 class="premium"
+            style="float: right;color: rgb(249, 114, 99);margin-right: 5rem;margin-top: 0;font-family: arial;"></h2>
+        <form>
+            <label for="amount">Enter expense amount</label>
+            <input type="number" id="amount" name="amount" min="1" required />
+            <label for="desc">Enter description</label>
+            <input type="text" id="desc" name="description" required />
+            <label for="category">Choose a category</label>
+            <select id="category" name="category" required>
+                <option value="">--from below--</option>
+                <option>Movie</option>
+                <option>Picnic</option>
+                <option>Exhibition</option>
+                <option>Household</option>
+            </select>
+            <button type="submit">Add Expense</button>
+        </form>
+        <button id="premium" style="display: none;">Buy Premium</button>
+    </div>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <div id="expenses">
+        <h2 style="text-align: center;">Expenses</h2>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.0/axios.min.js"></script>
     <script>
         const ul = document.getElementById('expenses');
         document.querySelector('form').onsubmit = async (e) => {
-            try{
+            try {
                 e.preventDefault();
 
-                if(document.querySelector('#error')){
+                if (document.querySelector('#error')) {
                     document.querySelector('#error').remove();
                 }
 
@@ -69,40 +83,106 @@
                 };
                 e.target.reset();
                 console.log(obj);
-                const response = await axios.post('http:localhost:3000/expense/addexpense', obj, {headers: {"Authorization": localStorage.getItem('token')}});
+                const token = localStorage.getItem('token');
+                const response = await axios.post('http://localhost:3000/expense/addexpense', obj, { headers: { "Authorization": token } });
                 displayExpenses(response.data);
             }
-            catch(err){
+            catch (err) {
                 document.querySelector('form').innerHTML = `<p id='error' style='color: red;'>${err}</p>`;
             }
         }
         window.addEventListener('DOMContentLoaded', async () => {
-            try{
+            try {
                 const token = localStorage.getItem('token');
                 console.log(token);
-                const response = await axios.get('http:localhost:3000/expense/getexpenses', { headers: {"Authorization": token}});
-                response.data.forEach(expense => {
+                const response = await axios.get('http://localhost:3000/expense/getexpenses', { headers: { "Authorization": token } });
+                if (response.data.premium) {
+                    document.getElementById('premium').remove();
+                    document.querySelector('.premium').textContent = 'Premium User';
+                }
+                else {
+                    document.getElementById('premium').removeAttribute('style');
+                    document.getElementById('premium').style.marginLeft = '1rem';
+                }
+                response.data.expenses.forEach(expense => {
                     displayExpenses(expense);
                 })
             }
-            catch(err){
+            catch (err) {
                 console.log(err);
             }
         })
-        function displayExpenses(obj){
+
+        document.getElementById('premium').onclick = async (e) => {
+            try {
+                // e.preventDefault();
+                const token = localStorage.getItem('token');
+                const response = await axios.get('http://localhost:3000/premium/purchase', { headers: { "Authorization": token } });
+                var options = {
+                    "key": response.data.key_id,
+                    "order_id": response.data.order.id,
+                    "handler": async function (result) {
+                        try {
+                            await axios.post('http://localhost:3000/premium/updateStatus', {
+                                order_id: options.order_id,
+                                payment_id: result.razorpay_payment_id
+                            }, { headers: { "Authorization": token } });
+
+                            alert('You are a premium user now!');
+                            document.getElementById('premium').remove();
+                            document.querySelector('.premium').textContent = 'Premium User';
+                        }
+                        catch (err) {
+                            console.log(err);
+                        }
+                    }
+                }
+                const rzpl = new Razorpay(options);
+                rzpl.open();
+                e.preventDefault();
+
+                rzpl.on('payment.failed', async function (response) {
+                    console.log(response, 'failure it is');
+                    try {
+                        await axios.post('http://localhost:3000/premium/updateStatus', {
+                            status: "failed",
+                            order_id: options.order_id
+                        }, { headers: { "Authorization": token } });
+                        alert('Sorry, payment failed!');
+                    }
+                    catch (err) {
+                        console.log(err);
+                    }
+                })
+            }
+            catch (err) {
+                console.log(err);
+            }
+        }
+
+        function displayExpenses(obj) {
             ul.innerHTML += `<li id='${obj.id}'>${obj.amount} - ${obj.description} - ${obj.category}
                 <button onclick='deleteExpense(${obj.id})'>Delete Expense</button></li>`;
         }
-        async function deleteExpense(id){
-            try{
-                await axios.delete(`http:localhost:3000/expense/delete-expense/${id}`);
+
+        async function deleteExpense(id) {
+            try {
+
+                if (document.querySelector('#error')) {
+                    document.querySelector('#error').remove();
+                }
+
+                const token = localStorage.getItem('token');
+                await axios.delete(`http://localhost:3000/expense/delete-expense/${id}`, { headers: { "Authorization": token } });
                 alert('Delete this expense?');
                 document.getElementById(id).remove();
             }
-            catch(err){
+            catch (err) {
                 console.log(err);
+                ul.innerHTML += `<h3 id='error' style='color: red; font-family: sans-serif;'>${err.response.data}</h3>`;
             }
         }
     </script>
 </body>
+
 </html>
