--- a/Task1/expense-tracker/signup.html
+++ b/Task1/expense-tracker/signup.html
@@ -62,7 +62,7 @@
                 }
             }catch(err){
                 console.log(err);
-                document.querySelector('form').innerHTML += `<p id='error' style='color: red;'>${err}</p>`;
+                document.querySelector('form').innerHTML += `<p id='error' style='color: red;'>${err.response.data}</p>`;
 
                 
             }
