--- a/Task1/expense-tracker/login.html
+++ b/Task1/expense-tracker/login.html
@@ -34,7 +34,8 @@
         <label for="password">Enter password</label>
         <input type="password" id="password" name="password" minlength="6" required><br/>
         <button type="submit">Login</button>
-        <a href="./signup.html">New User? - Signup here!</a>
+        <button id="forgot">Forgot password</button>
+        <a href="./signup.html" style="display: block;">New User? - Signup here!</a>
     </form>
     
     
@@ -68,6 +69,21 @@
             catch(err){
                 console.log(err);
                 document.querySelector('form').innerHTML += `<p id='error' style='color: red;'>${err.response.data}</p>`;
+            }
+        }
+
+        document.getElementById('forgot').onclick = () => {
+            document.querySelector('body').innerHTML = `<form id='password'><label for='email'>Enter your registered email</label><input type='email' id='email' name='mailId' required/><button>Submit</button></form>`;
+            document.getElementById('password').onsubmit = async (e) => {
+                try{
+                    e.preventDefault();
+                    const email = e.target.email.value;
+                    const response = await axios.post('http://localhost:3000/password/forgotpassword', {email});
+                    console.log(response.data);
+                }
+                catch(err){
+                    console.log(err);
+                }
             }
         }
     </script>
