--- a/Task1/expense-tracker/report.html
+++ b/Task1/expense-tracker/report.html
@@ -13,14 +13,16 @@
         }
         table {
             margin: 1rem auto;
-            border: 3px solid whitesmoke;
+            border: 3px solid antiquewhite;
+            background-color: wheat;
         }
         input {
-            border-style: hidden;
+            border: 1px solid wheat;
             border-radius: 4rem;
             padding: 0.4rem;
             margin-top: 1.5rem;
-            background-color: bisque;
+            background-color: #79e8f7;
+            color: white;
             cursor: pointer;
         }
     </style>
@@ -42,8 +44,8 @@
                 <td>8-10-2023</td>
                 <td>Tickets</td>
                 <td>Movie</td>
-                <td>nil</td>
                 <td>₹300</td>
+                <td>nil</td>
             </tr>
         </table>
         <table id="monthly">
