--- a/Task1/expense-tracker/login_page/login.html
+++ b/Task1/expense-tracker/login_page/login.html
@@ -5,27 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Tracker</title>
-    <style>
-        form {
-            width: 18rem;
-            margin: auto;
-            padding: 1rem;
-        }
-        label {
-            display: block;
-            margin-top: 0.5rem;
-        }
-        input {
-            width: 95%;
-            margin-top: 1px;
-        }
-        button {
-            margin: 0.5rem 0;
-        }
-        a {
-            text-decoration: none;
-        }
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="./login.css">
 </head>
 <body>
     <form>
@@ -37,7 +19,9 @@
         <button id="forgot">Forgot password</button>
         <a href="../signup_page/signup.html" style="display: block;">New User? - Signup now</a>
     </form>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.0/axios.min.js"></script>
     <script src="./login.js"></script>
 </body>
