--- a/Task1/expense-tracker/back-end/public/expense/index.htm
+++ b/Task1/expense-tracker/back-end/public/expense/index.htm
@@ -38,7 +38,17 @@
                         <option>Picnic</option>
                         <option>Exhibition</option>
                         <option>Household</option>
+                        <option>Festival</option>
+                        <option>Shopping</option>
+                        <option>Travel</option>
+                        <option>Groceries</option>
+                        <option>Gift</option>
+                        <option>Health</option>
+                        <option>Luxuries</option>
+                        <option>Charity/Donation</option>
                     </select>
+                    <label for="date">Select Date</label>
+                    <input class="form-control" type="date" id="date" name="date" required>
                     <button type="submit" id="submit" class="btn btn-info btn-sm">Add Expense</button>
                     <p id="error"></p>
                 </div>
@@ -87,7 +97,7 @@
         </span>
         <div id="pages"></div>
     </div>
-    <div id="leaderboard"></div>
+    <ol id="leaderboard"></ol>
     <div id="downloads">
         <h2>Downloads</h2>
     </div>
