--- a/Task1/group-chat/chat/chat.html
+++ b/Task1/group-chat/chat/chat.html
@@ -49,5 +49,6 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.2/axios.min.js"></script>
+    <script src="./chat.js"></script>
 </body>
 </html>
