chat app with interval

--- a/Task1/group-chat/chat/chat.html
+++ b/Task1/group-chat/chat/chat.html
@@ -13,6 +13,10 @@
             margin-left: 28vw;
 
         }
+        [class*='col-']:nth-child(odd){
+            background-color: #5f5959;
+            color: #fff;
+        }
         input {
             width: 50%;
             border: 2px solid #dadada;
