optimize chat app

--- a/Task1/group-chat/chat/chat.html
+++ b/Task1/group-chat/chat/chat.html
@@ -31,7 +31,7 @@
     <div class="wrapper">
         <div class="container">
             <h2 class="text-center mb-4">Chat App</h2>
-            <div class="row chats d-flex justify-content-center">
+            <div class="row chats pb-5 d-flex justify-content-center">
                 <div class="col-8 bg-secondary text-light list-item">You: Hi there!</div>
                 <div class="col-8 list-item">Vaibhav: Hello!</div>
                 <div class="col-8 bg-secondary text-light">You: Vaibhav, r u watching the CWC Final today?</div>
