--- a/Task1/group-chat/sign-up/random.htm
+++ b/Task1/group-chat/sign-up/random.htm
@@ -11,17 +11,38 @@
 <body>
     loka
     <script>
-        async function first(a, b) {
-            if (a < b) {
-
-                a = a * 5;
-                if (a > b) {
-                    a = a / 5;
-                }
+        "use strict";
+        const math = {
+            mix(a, b, cb){
+                console.log(a + b);
+                cb(a*b);
             }
-            console.log(a);
+        };
+        function first(a, b) {
+            {
+                var c = 18;
+                // var c = 6;
+                math.mix(c, 5, (e) => {
+                    {
+                        c = e;
+                    }
+                })                
+                console.log(c);
+            }
+            console.log(c);
         }
+        // console.log(c);
+        const arrow = () => { 
+            const constant = 'some';
+            console.log(this);
+        };
+        function normal() {
+            const variable = 'any';
+            console.log(this);
+        }
+        normal();
         first(3, 4);
+        arrow();
     </script>
 </body>
 
