--- a/Task1/group-chat/back-end/public/chat/chat.html
+++ b/Task1/group-chat/back-end/public/chat/chat.html
@@ -90,7 +90,7 @@
                 <div>
                     <!-- <form id="send" action="/group/newMsg?id=" method="post" enctype="multipart/form-data"> -->
                         <input type="text" name="comment" id="comment" placeholder="type here" />
-                        <input type="file" name="file" id="file" accept=".jpg, .png" />
+                        <input type="file" name="files" id="files" multiple />
                         <button class="mx-0.5" id="sendMsg" type="submit">Send</button>
                     <!-- </form> -->
                 </div>
